--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-responsive": "^9.0.0-beta.4",
     "react-reveal": "^1.2.2",
     "react-rnd": "^10.2.3",
+    "react-router-dom": "^6.2.2",
     "react-scroll-parallax": "^2.3.4",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.0.0",
