--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "UnifairesLanding",
+  "name": "Unifaires Landing",
   "version": "10.0.1",
   "private": true,
   "main": "firebaseFunctions.js",
@@ -71,6 +71,8 @@
     "react-stickynode": "4.0.0",
     "react-tabs": "^3.2.2",
     "reactstrap": "9.0.1",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.2.1",
     "styled-system": "5.1.5",
     "swiper": "^7.0.6",
