--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "^5.3.0",
     "@reach/accordion": "^0.16.1",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/stack": "^6.2.1",
     "@redq/reuse-modal": "^1.1.9",
     "@styled-system/theme-get": "^5.1.2",
     "animate.css": "^4.1.1",
@@ -69,6 +71,7 @@
     "react-scroll-parallax": "^2.3.4",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.0.0",
+    "react-select-places": "^1.1.8",
     "react-slick": "^0.28.1",
     "react-stickynode": "4.0.0",
     "react-tabs": "^3.2.2",
@@ -78,7 +81,7 @@
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.2.1",
     "styled-system": "5.1.5",
-    "swiper": "^7.0.6",
+    "swiper": "^7.4.1",
     "tsparticles": "^1.35.2"
   },
   "devDependencies": {
