--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@babel/core": "^7.17.10",
     "@babel/plugin-proposal-decorators": "^7.16.7",
     "@emotion/styled": "^11.6.0",
     "@glidejs/glide": "^3.4.1",
