--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@mui/styled-engine-sc": "^5.3.0",
+    "@mui/x-data-grid": "^5.12.0",
     "@reach/accordion": "^0.16.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/stack": "^6.2.1",
