--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "rc-drawer": "^4.1.0",
     "rc-progress": "^3.1.1",
     "rc-tabs": "11.10.1",
-    "react": "^17.0.2",
+    "react": "^16.8.2",
     "react-accessible-accordion": "3.3.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-aria-menubutton": "^7.0.2",
@@ -84,7 +84,8 @@
     "styled-components": "^5.2.1",
     "styled-system": "5.1.5",
     "swiper": "^7.4.1",
-    "tsparticles": "^1.35.2"
+    "tsparticles": "^1.35.2",
+    "vercel": "^25.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.11.1",
